--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -65,8 +65,6 @@ general {
     border_size = 3
     col.active_border = rgb(89b4fa) #rgb(f38ba8) 45deg
     col.inactive_border = rgb(6c757d)
-    # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    # col.inactive_border = rgba(595959aa)
     resize_on_border = true
     allow_tearing = false
     layout = dwindle
@@ -103,18 +101,18 @@ decoration {
 }
 animations {
     enabled = true
-    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = wind, 0.05, 0.9, 0.1, 1.0
     bezier = winIn, 0.1, 1.1, 0.1, 1.1
     bezier = winOut, 0.3, -0.3, 0, 1
     bezier = liner, 1, 1, 1, 1
-    animation = windows, 1, 6, wind, slide
-    animation = windowsIn, 1, 6, winIn, slide
-    animation = windowsOut, 1, 5, winOut, slide
-    animation = windowsMove, 1, 5, wind, slide
+    animation = windows, 1, 4, wind, popin
+    animation = windowsIn, 1, 4, winIn, gnomed
+    animation = windowsOut, 1, 3, winOut, gnomed
+    animation = windowsMove, 1, 3, wind, slide
     animation = border, 1, 1, liner
-    animation = borderangle, 1, 30, liner, loop
+    # animation = borderangle, 1, 30, liner, loop
     animation = fade, 1, 10, default
-    animation = workspaces, 1, 5, wind
+    animation = workspaces, 1, 3, wind
 }
 dwindle {
     pseudotile = true 
@@ -202,7 +200,7 @@ bind = $mainMod Ctrl, Escape, exec, wlogout
 bind = $mainMod, G, exec, geforcenow-electron
 bind = $mainMod, A, exec, kitty --override background_opacity=1 -e nvim
 bind = $mainMod, period, exec, emote
-
+bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 
 # Navigating through the windows 
 bind = $mainMod, left, movefocus, l
