changes to hyprland.conf

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -68,10 +68,6 @@ general {
     resize_on_border = true
     allow_tearing = false
     layout = dwindle
-    snap {
-        enabled = true
-        monitor_gap = 10
-    }
 }
 decoration {
     rounding = 6
@@ -290,8 +286,9 @@ windowrulev2 = size 400 300, class:^(bluetui)$
 #For the music player TUI
 windowrulev2 = float, class:^(fum)$
 windowrulev2 = pin, class:^(fum)$
-windowrulev2 = move 850 40, class:^(fum)$
+windowrulev2 = move 1625 910, class:^(fum)$
 windowrulev2 = size 285 160, class:^(fum)$
+windowrulev2 = nodim, class:^(fum)$
 
 #For the resource monitor 
 windowrulev2 = float, class:^(monitor)$
