--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/mizx/Pictures/Walls/wall51.jpg
-wallpaper = , /home/mizx/Pictures/Walls/wall51.jpg
+preload = /home/mizx/.config/Walls/wall51.jpg
+wallpaper = , /home/mizx/.config/Walls/wall51.jpg
