--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -282,6 +282,7 @@ windowrulev2 = move 1412 40, title:^(Volume Control)$
 windowrulev2 = float, class:^(bluetui)$
 windowrulev2 = move 1483 40, class:^(bluetui)$
 windowrulev2 = size 400 300, class:^(bluetui)$
+windowrulev2 = nodim, class:^(bluetui)$
 
 #For the music player TUI
 windowrulev2 = float, class:^(fum)$
