--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,6 +34,7 @@ exec-once = waybar & hyprpaper
 exec-once = swaync
 exec-once = systemctl --user start hyprpolkitagent
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = hellwal -i /home/mizx/.config/Walls/wall56.jpg -m
 
 #       ╭───────────────────────╮
 #       │ ENVIRONMENT VARIABLES │
@@ -86,8 +87,8 @@ decoration {
     }
     blur {
         enabled = true
-        size = 6
-        passes = 3
+        size = 10
+        passes = 4
         new_optimizations = true
         vibrancy = 0.1696
         ignore_opacity = true
@@ -194,7 +195,7 @@ bind = $mainMod, L, exec, hyprlock
 bind = Ctrl, Escape, exec, killall waybar || waybar
 bind = $mainMod Ctrl, Escape, exec, wlogout
 bind = $mainMod, G, exec, geforcenow-electron
-bind = $mainMod, A, exec, kitty --override background_opacity=1 -e nvim
+bind = $mainMod, A, exec, kitty --override window_padding_width=25 --override background_opacity=1 -e nvim
 bind = $mainMod, period, exec, emote
 bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 
@@ -276,7 +277,8 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 
 #For Pavucontrol
 windowrulev2 = float, title:^(Volume Control)$
-windowrulev2 = move 1412 40, title:^(Volume Control)$
+windowrulev2 = move 1154 40, title:^(Volume Control)$
+windowrulev2 = size 749 347, title:^(Volume Control)$
 
 #For the bluetooth TUI
 windowrulev2 = float, class:^(bluetui)$
