--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -5,7 +5,7 @@
  #                                                                ╰───────────────────────────────╯
 
 source = ~/.config/hypr/mocha.conf
-
+# source = ~/.config/hypr/files/keybinds.conf
 
 #       ╭───────────────╮
 #       │ MONITOR MODES │
@@ -64,7 +64,7 @@ general {
     gaps_in = 3
     gaps_out = 6
     border_size = 3
-    col.active_border = rgb(89b4fa) #rgb(f38ba8) 45deg
+    col.active_border = rgb(cb84e0) #rgb(f38ba8) 45deg
     col.inactive_border = rgb(6c757d)
     resize_on_border = true
     allow_tearing = false
@@ -148,6 +148,7 @@ input {
     kb_rules =
     numlock_by_default = true
     repeat_delay = 300
+    repeat_rate = 25
     follow_mouse = 1
     sensitivity = 0
     accel_profile = adaptive
@@ -197,7 +198,8 @@ bind = $mainMod Ctrl, Escape, exec, wlogout
 bind = $mainMod, G, exec, geforcenow-electron
 bind = $mainMod, A, exec, kitty --override window_padding_width=25 --override background_opacity=1 -e nvim
 bind = $mainMod, period, exec, emote
-bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
+bind = $mainMod, F1, exec, ~/.config/hypr/scripts/gamemode.sh
+bind = $mainMod, TAB, exec, ~/.config/hypr/scripts/floating.sh
 
 # Navigating through the windows 
 bind = $mainMod, left, movefocus, l
@@ -295,8 +297,8 @@ windowrulev2 = nodim, class:^(fum)$
 
 #For the resource monitor 
 windowrulev2 = float, class:^(monitor)$
-windowrulev2 = move 1135 40, class:^(monitor)$
-windowrulev2 = size 580 450, class:^(monitor)$
+windowrulev2 = move 1066 42, class:^(monitor)$
+windowrulev2 = size 841 458, class:^(monitor)$
 
 # For qualculate 
 windowrulev2 = float,class:io.github.Qalculate.qalculate-qt,title:Qalculate!
