--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -2,10 +2,10 @@
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "/home/mizx/.config/btop/themes/catppuccin_macchiato.theme"
+color_theme = "/home/mizx/.config/btop/themes/catppuccin_mocha.theme"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
-theme_background = True
+theme_background = False
 
 #* Sets if 24-bit truecolor should be used, will convert 24-bit colors to 256 color (6x6x6 color cube) if false.
 truecolor = True
@@ -32,10 +32,10 @@ rounded_corners = True
 #* "block" has half the resolution of braille but uses more common characters.
 #* "tty" uses only 3 different symbols but will work with most fonts and should work in a real TTY.
 #* Note that "tty" only has half the horizontal resolution of the other two, so will show a shorter historical view.
-graph_symbol = "tty"
+graph_symbol = "braille"
 
 # Graph symbol to use for graphs in cpu box, "default", "braille", "block" or "tty".
-graph_symbol_cpu = "default"
+graph_symbol_cpu = "tty"
 
 # Graph symbol to use for graphs in gpu box, "default", "braille", "block" or "tty".
 graph_symbol_gpu = "default"
@@ -98,7 +98,7 @@ cpu_graph_upper = "total"
 
 #* Sets the CPU stat shown in lower half of the CPU graph, "total" is always available.
 #* Select from a list of detected attributes from the options menu.
-cpu_graph_lower = "Auto"
+cpu_graph_lower = "gpu-average"
 
 #* If gpu info should be shown in the cpu box. Available values = "Auto", "On" and "Off".
 show_gpu_info = "Auto"
@@ -147,7 +147,7 @@ clock_format = "%X"
 background_update = True
 
 #* Custom cpu model name, empty string to disable.
-custom_cpu_name = ""
+custom_cpu_name = "Intel Core i3-7100"
 
 #* Optional filter for shown disks, should be full path of a mountpoint, separate multiple values with whitespace " ".
 #* Only disks matching the filter will be shown. Prepend exclude= to only show disks not matching the filter. Examples: disk_filter="/boot /home/user", disks_filter="exclude=/boot /home/user"
@@ -157,16 +157,16 @@ disks_filter = ""
 mem_graphs = True
 
 #* Show mem box below net box instead of above.
-mem_below_net = False
+mem_below_net = True
 
 #* Count ZFS ARC in cached and available memory.
 zfs_arc_cached = True
 
 #* If swap memory should be shown in memory box.
-show_swap = True
+show_swap = False
 
 #* Show swap as a disk, ignores show_swap value above, inserts itself after first disk.
-swap_disk = True
+swap_disk = False
 
 #* If mem box should be split to also show disks info.
 show_disks = True
@@ -190,7 +190,7 @@ show_io_stat = True
 io_mode = False
 
 #* Set to True to show combined read/write io graphs in io mode.
-io_graph_combined = False
+io_graph_combined = True
 
 #* Set the top speed for the io graphs in MiB/s (100 by default), use format "mountpoint:speed" separate disks with whitespace " ".
 #* Example: "/mnt/media:100 /:20 /boot:1".
@@ -214,7 +214,7 @@ net_iface = ""
 base_10_bitrate = "Auto"
 
 #* Show battery stats in top right if battery is present.
-show_battery = True
+show_battery = False
 
 #* Which battery to use if multiple are present. "Auto" for auto detection.
 selected_battery = "Auto"
