--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -6,7 +6,7 @@ general {
 
 background {
     monitor =
-    path = /home/mizx/Pictures/Walls/wall25.jpg
+    path = /home/mizx/.config/Walls/wall25.jpg
     blur_passes = 2
 }
 
@@ -81,7 +81,7 @@ label {
 
 image {
     monitor =
-    path = /home/mizx/Pictures/Walls/wall35.jpg
+    path = /home/mizx/.config/Walls/wall35.jpg
     size = 280 # lesser side if not 1:1 ratio
     rounding = 255 # negative values mean circle
     border_size = 3
