--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,7 +23,7 @@ monitor=HDMI-A-1,1920x1080@75.00Hz,auto,auto
 
 $terminal = kitty
 $fileManager = dolphin
-$menu = /home/mizx/.config/rofi/launchers/type-6/launcher.sh
+$menu = ~/.config/rofi/launchers/type-6/launcher.sh
 
 #       ╭───────────╮
 #       │ AUTOSTART │
@@ -35,7 +35,7 @@ exec-once = waybar & hyprpaper
 exec-once = swaync
 exec-once = systemctl --user start hyprpolkitagent
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = hellwal -i /home/mizx/.config/Walls/wall56.jpg -m
+exec-once = hellwal -i ~/.config/Walls/wall56.jpg -m
 
 #       ╭───────────────────────╮
 #       │ ENVIRONMENT VARIABLES │
