More wallpapers and better file tree structure

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,7 +4,7 @@
  #                                                                │                               │
  #                                                                ╰───────────────────────────────╯
 
-source = ~/.config/hypr/files/mocha.conf
+
 source = ~/.config/hypr/files/keybinds.conf
 source = ~/.config/hypr/files/window_and_workspace.conf
 source = ~/.config/hypr/files/look_and_feel.conf
@@ -23,7 +23,7 @@ monitor=HDMI-A-1,1920x1080@75.00Hz,auto,auto
 
 $terminal = kitty
 $fileManager = dolphin
-$menu = ~/.config/rofi/launchers/type-6/launcher.sh
+$menu = ~/.config/rofi.mizx/config-c.rasi
 
 #       ╭───────────╮
 #       │ AUTOSTART │
