--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,4 @@
-include colors/wall61.conf
+include colors/pink.conf
 
 # Kitty try configuration file
 font_family family="JetBrainsMono Nerd Font"
