--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -1,9 +1,11 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-        "type": "small",
+        "source": "~/.config/fastfetch/logo-2.txt",
+        // "type": "small",
         "padding": {
-            "right": 2
+            "top": 2
+//            "right": 2
         }
     },
     "display": {
